--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "4              1          79084.10      0            False           True  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,12 +288,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Handle Skewness or Scale Differences"
+    "# Split into Features and Target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop('churn', axis=1)\n",
+    "y = df['churn']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, stratify=y, random_state=42\n",
+    ") \n",
+    "\n",
+    "# Stratify ensures that the train and test sets have the same proportion of samples from each class as the original dataset (y). This is crucial for classification problems to prevent one set from having an imbalanced class distribution.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Handle Skewness or Scale Differences (NO leakage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,12 +343,17 @@
     "num_features = ['credit_score', 'age', 'tenure', 'balance',\n",
     "                'products_number', 'estimated_salary']\n",
     "\n",
-    "df[num_features] = scaler.fit_transform(df[num_features])"
+    "# Transform train\n",
+    "X_train[num_features] = scaler.fit_transform(X_train[num_features])\n",
+    "\n",
+    "# Transform test\n",
+    "\n",
+    "X_test[num_features] = scaler.transform(X_test[num_features])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -342,129 +386,252 @@
        "      <th>credit_card</th>\n",
        "      <th>active_member</th>\n",
        "      <th>estimated_salary</th>\n",
-       "      <th>churn</th>\n",
        "      <th>country_Germany</th>\n",
        "      <th>country_Spain</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.326221</td>\n",
+       "      <th>5702</th>\n",
+       "      <td>-0.680735</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.279932</td>\n",
+       "      <td>0.684723</td>\n",
+       "      <td>-1.226059</td>\n",
+       "      <td>0.808830</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.293517</td>\n",
-       "      <td>-1.041760</td>\n",
-       "      <td>-1.225848</td>\n",
-       "      <td>-0.911583</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.021886</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-0.095021</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.440036</td>\n",
+       "      <th>3667</th>\n",
+       "      <td>-1.301915</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.564935</td>\n",
+       "      <td>-0.350971</td>\n",
+       "      <td>0.877113</td>\n",
+       "      <td>0.808830</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.198164</td>\n",
-       "      <td>-1.387538</td>\n",
-       "      <td>0.117350</td>\n",
-       "      <td>-0.911583</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.778941</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1617</th>\n",
+       "      <td>-0.970619</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.100072</td>\n",
+       "      <td>-0.350971</td>\n",
+       "      <td>-1.226059</td>\n",
+       "      <td>0.808830</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.216534</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.099469</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-1.536794</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.293517</td>\n",
-       "      <td>1.032908</td>\n",
-       "      <td>1.333053</td>\n",
-       "      <td>2.527057</td>\n",
+       "      <th>5673</th>\n",
+       "      <td>-0.121674</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.240687</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.501521</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.007457</td>\n",
-       "      <td>-1.387538</td>\n",
-       "      <td>-1.225848</td>\n",
-       "      <td>0.807737</td>\n",
+       "      <td>-0.469934</td>\n",
+       "      <td>-0.005739</td>\n",
+       "      <td>1.011458</td>\n",
+       "      <td>0.808830</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-0.108918</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.063884</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.388871</td>\n",
-       "      <td>-1.041760</td>\n",
-       "      <td>0.785728</td>\n",
-       "      <td>-0.911583</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.365276</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1.147374</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4272</th>\n",
+       "      <td>-0.111321</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.469934</td>\n",
+       "      <td>-0.696202</td>\n",
+       "      <td>0.023204</td>\n",
+       "      <td>-0.910256</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.200283</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>958</th>\n",
+       "      <td>-1.239797</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.134940</td>\n",
+       "      <td>1.029954</td>\n",
+       "      <td>0.902034</td>\n",
+       "      <td>-0.910256</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.613560</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1303</th>\n",
+       "      <td>-0.597911</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.659935</td>\n",
+       "      <td>1.375185</td>\n",
+       "      <td>0.926437</td>\n",
+       "      <td>0.808830</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.798858</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2798</th>\n",
+       "      <td>-0.742853</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.039939</td>\n",
+       "      <td>0.339492</td>\n",
+       "      <td>1.187000</td>\n",
+       "      <td>-0.910256</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.799344</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2415</th>\n",
+       "      <td>0.571977</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.659935</td>\n",
+       "      <td>0.339492</td>\n",
+       "      <td>0.290623</td>\n",
+       "      <td>-0.910256</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.823612</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>1.068921</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.039939</td>\n",
+       "      <td>1.029954</td>\n",
+       "      <td>-1.226059</td>\n",
+       "      <td>0.808830</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.821802</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   credit_score  gender       age    tenure   balance  products_number  \\\n",
-       "0     -0.326221       0  0.293517 -1.041760 -1.225848        -0.911583   \n",
-       "1     -0.440036       0  0.198164 -1.387538  0.117350        -0.911583   \n",
-       "2     -1.536794       0  0.293517  1.032908  1.333053         2.527057   \n",
-       "3      0.501521       0  0.007457 -1.387538 -1.225848         0.807737   \n",
-       "4      2.063884       0  0.388871 -1.041760  0.785728        -0.911583   \n",
+       "      credit_score  gender       age    tenure   balance  products_number  \\\n",
+       "5702     -0.680735       1 -0.279932  0.684723 -1.226059         0.808830   \n",
+       "3667     -1.301915       1 -0.564935 -0.350971  0.877113         0.808830   \n",
+       "1617     -0.970619       0  0.100072 -0.350971 -1.226059         0.808830   \n",
+       "5673     -0.121674       1 -0.469934 -0.005739  1.011458         0.808830   \n",
+       "4272     -0.111321       0 -0.469934 -0.696202  0.023204        -0.910256   \n",
+       "...            ...     ...       ...       ...       ...              ...   \n",
+       "958      -1.239797       1 -1.134940  1.029954  0.902034        -0.910256   \n",
+       "1303     -0.597911       0 -0.659935  1.375185  0.926437         0.808830   \n",
+       "2798     -0.742853       1 -1.039939  0.339492  1.187000        -0.910256   \n",
+       "2415      0.571977       1 -0.659935  0.339492  0.290623        -0.910256   \n",
+       "778       1.068921       1 -1.039939  1.029954 -1.226059         0.808830   \n",
        "\n",
-       "   credit_card  active_member  estimated_salary  churn  country_Germany  \\\n",
-       "0            1              1          0.021886      1            False   \n",
-       "1            0              1          0.216534      0            False   \n",
-       "2            1              0          0.240687      1            False   \n",
-       "3            0              0         -0.108918      0            False   \n",
-       "4            1              1         -0.365276      0            False   \n",
+       "      credit_card  active_member  estimated_salary  country_Germany  \\\n",
+       "5702            1              0         -0.095021            False   \n",
+       "3667            0              0         -0.778941             True   \n",
+       "1617            0              1          0.099469            False   \n",
+       "5673            0              0         -1.147374            False   \n",
+       "4272            1              1          1.200283            False   \n",
+       "...           ...            ...               ...              ...   \n",
+       "958             0              0         -1.613560            False   \n",
+       "1303            1              0         -0.798858             True   \n",
+       "2798            1              0          0.799344             True   \n",
+       "2415            1              1          0.823612            False   \n",
+       "778             1              1         -0.821802            False   \n",
        "\n",
-       "   country_Spain  \n",
-       "0          False  \n",
-       "1           True  \n",
-       "2          False  \n",
-       "3          False  \n",
-       "4           True  "
+       "      country_Spain  \n",
+       "5702          False  \n",
+       "3667          False  \n",
+       "1617           True  \n",
+       "5673           True  \n",
+       "4272           True  \n",
+       "...             ...  \n",
+       "958            True  \n",
+       "1303          False  \n",
+       "2798          False  \n",
+       "2415          False  \n",
+       "778           False  \n",
+       "\n",
+       "[100 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "X_test.head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train.to_csv('../data/processed/X_train_processed.csv', index=False)\n",
+    "X_test.to_csv('../data/processed/X_test_processed.csv', index=False)\n",
+    "y_train.to_csv('../data/processed/y_train.csv', index=False)\n",
+    "y_test.to_csv('../data/processed/y_test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Scalar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('../models/scaler.pkl', 'wb') as f:\n",
+    "    pickle.dump(scaler, f)"
+   ]
   }
  ],
  "metadata": {
