Saving model + creating streamlit

--- a/notebooks/model_building.ipynb
+++ b/notebooks/model_building.ipynb
@@ -986,6 +986,25 @@
     "\n",
     "print(\"Prediction (0=no churn, 1=churn):\", prediction)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('../models/model.pkl', 'wb') as f:\n",
+    "    pickle.dump(final_model, f)"
+   ]
   }
  ],
  "metadata": {
