--- a/notebooks/model_building_pytorch.ipynb
+++ b/notebooks/model_building_pytorch.ipynb
@@ -236,6 +236,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a058b57",
+   "metadata": {},
+   "source": [
+    "This NN model provided a better Recall than the SVC model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "da370d41",
    "metadata": {},
    "source": [
